--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "nldata"
-version = "0.3.0"
-description = "NLData is a library of Natural Language Datasets."
+version = "0.4.0"
+description = "NLData is a library of Natural Language Datasets at your fingertips"
 authors = ["Davide Nunes <davidenunes@pm.me>"]
 
 [tool.poetry.dependencies]
